...
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="toggle_turn_on">NN:On</string>
    <string name="toggle_turn_off">NN:Off</string>
    <string name="toggle">Use NNAPI</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Green Guide</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="title_myrecycling">My Recycling</string>
    <string name="title_manual_input">Add an Item</string>
    <string name="title_confirm_add">Your Item</string>
    <!-- Preference Titles -->
...
        <item>Float</item>
        <item>Quantized</item>
    </string-array>

    <string name="device">Device:</string>
    <string name="instructionsMenu1">General</string>
    <string name="instructionsMenu2">Recycling Locations</string>
    <string name="instructionsMenu3">eWaste</string>
    <string name="instructionsSource1">National Environment Agency, Singapore (2021)</string>
    <string name="instructionsSource2">Towards Zero Waste, Singapore (2021)</string>

    <string name="instructionsText1"><br>Blue recycling bins can be found across residential estates in Singapore. Paper, plastic,
        glass and metal recycleables can be deposited into these blue bins for collection.</br><br></br>
        <br>Items contaminated by food or liquid waste cannot be recycled. The following infographic shows items that are commonly mistaken for recycleables. </br> <br></br></string>
...
