...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dip"
            android:text="@string/recyclingLocationsText1" />

        <ImageView
            android:id="@+id/recyclinglocations"
            android:adjustViewBounds="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="recycling locations"
            android:paddingTop="20dip"
            android:paddingHorizontal="20dip"
            android:src="@drawable/recyclinglocations"></ImageView>

        <TextView
            android:id="@+id/recyclingLocationsSource1"
...
