...
    <item
        android:id="@+id/navHome"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navInstructions"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navNotifications"
        android:icon="@drawable/ic_account_box_24px"
...
